--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,8 +16,10 @@ aliases:
 
       # Credentials
       mkdir -p VideoApp/VideoApp/Credentials || true
-      $GOOGLE_SERVICE_INFO_PLIST | base64 --decode > VideoApp/VideoApp/Credentials/GoogleService-Info.plist
-      $TWILIO_CREDENTIALS | base64 --decode > VideoApp/VideoApp/Credentials/TwilioCredentials.json
+      # $GOOGLE_SERVICE_INFO_PLIST | base64 --decode > VideoApp/VideoApp/Credentials/GoogleService-Info.plist
+      # $TWILIO_CREDENTIALS | base64 --decode > VideoApp/VideoApp/Credentials/TwilioCredentials.json
+      base64 -D <<< $GOOGLE_SERVICE_INFO_PLIST -o VideoApp/VideoApp/Credentials/GoogleService-Info.plist
+      base64 -D <<< $TWILIO_CREDENTIALS -o VideoApp/VideoApp/Credentials/TwilioCredentials.json
 
   - &log-hw-info
     name: Log HW info
