--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -134,7 +134,9 @@ jobs:
       - checkout
       - run:
           name: Install CocoaPods
-          command: pod install
+          command: |
+            curl https://cocoapods-specs.circleci.com/fetch-cocoapods-repo-from-s3.sh | bash -s cf
+            pod install
       - run: *reset-ruby
       - restore-cache: *restore-cache-brew-deps
       - run: *install-brew-deps
