--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -132,11 +132,18 @@ jobs:
     steps:
       - run: *log-hw-info
       - checkout
+      - restore_cache:
+          key: 1-gems-{{ checksum "Gemfile.lock" }}
+      - run: bundle check || bundle install --path vendor/bundle
+      - save_cache:
+          key: 1-gems-{{ checksum "Gemfile.lock" }}
+          paths:
+            - vendor/bundle
       - run:
           name: Install CocoaPods
           command: |
             curl https://cocoapods-specs.circleci.com/fetch-cocoapods-repo-from-s3.sh | bash -s cf
-            pod install
+            bundle exec pod install
       - run: *reset-ruby
       - restore-cache: *restore-cache-brew-deps
       - run: *install-brew-deps
