--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -59,3 +59,9 @@ jobs:
   #   environment:
   #     - CONFIGURATION=Debug
   #     - IOS_APP=VideoApp-Community
+
+workflows:
+  version: 2
+  build-deploy:
+    jobs:
+      - build_and_test_video_twilio:
