--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,16 +52,17 @@ jobs:
     environment:
       - CONFIGURATION=Debug
       - IOS_APP=VideoApp-Twilio
-  # build_video_community:
-  #     - run:
-  #         command: Scripts/build-app.sh
-  #         no_output_timeout: 30m
-  #   environment:
-  #     - CONFIGURATION=Debug
-  #     - IOS_APP=VideoApp-Community
+  build_video_community:
+      - run:
+          command: Scripts/build-app.sh
+          no_output_timeout: 30m
+    environment:
+      - CONFIGURATION=Debug
+      - IOS_APP=VideoApp-Community
 
 workflows:
   version: 2
   build-deploy:
     jobs:
       - build_and_test_video_twilio
+      - build_video_community
