--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,13 +39,16 @@ commands:
             bundle exec pod install
   build_stuff:
     description: Build
+    parameters:
+      scheme:
+        type: string
     steps:
       - run:
           name: Build
           command: |
             xcodebuild \
               -workspace VideoApp.xcworkspace \
-              -scheme "Video-Internal" \
+              -scheme << parameters.scheme >> \
               -sdk iphonesimulator \
               -destination 'platform=iOS Simulator,name=iPhone 11,OS=13.0' \
             | xcpretty
@@ -66,15 +69,14 @@ jobs:
     executor: macos_executor
     steps:
       - setup_steps
-      - run:
-          name: "Test"
-          command: Scripts/build-app-community.sh
-          no_output_timeout: 30m
+      - build_stuff:
+          scheme: "Video-Community"
   build_video_internal:
     executor: macos_executor
     steps:
       - setup_steps
-      - build_stuff
+      - build_stuff:
+          scheme: "Video-Internal"
 
 workflows:
   version: 2.1 # change to 2
