--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,8 +13,7 @@ executors:
       xcode: "11.0.0"
 
 commands:
-  common_setup:
-    description: Setup steps
+  setup:
     steps:
       - checkout
       - run:
@@ -29,28 +28,26 @@ commands:
           name: Install gems  
           command: bundle install --path vendor/bundle
       - run:
-          name: Fetch CocoaPods Specs
+          name: Fetch CocoaPods specs
           command: curl https://cocoapods-specs.circleci.com/fetch-cocoapods-repo-from-s3.sh | bash -s cf
       - run:
           name: Install CocoaPods
           command: bundle exec pod install
   build:
-    description: Build
     parameters:
       scheme:
         type: string
     steps:
-      - common_setup
+      - setup
       - run:
           name: Build
           command: xcodebuild -workspace VideoApp.xcworkspace -scheme << parameters.scheme >> -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone 11,OS=13.0' | xcpretty
   build_and_test:
-    description: Build and test
     parameters:
       scheme:
         type: string
     steps:
-      - common_setup
+      - setup
       - run:
           name: Build and test
           command: xcodebuild -workspace VideoApp.xcworkspace -scheme << parameters.scheme >> -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone 11,OS=13.0' test | xcpretty
@@ -60,17 +57,17 @@ jobs:
     executor: macos_executor
     steps:
       - build_and_test:
-          scheme: "Video-Twilio"
+          scheme: Video-Twilio
   build_community_app:
     executor: macos_executor
     steps:
       - build:
-          scheme: "Video-Community"
+          scheme: Video-Community
   build_internal_app:
     executor: macos_executor
     steps:
       - build:
-          scheme: "Video-Internal"
+          scheme: Video-Internal
 
 workflows:
   version: 2
