--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,9 +19,9 @@ commands:
       - run:
           name: Install credentials
           command: |
-            mkdir -p VideoApp/VideoApp/Credentials || true
-            base64 -D \<<< $GOOGLE_SERVICE_INFO_PLIST -o VideoApp/VideoApp/Credentials/GoogleService-Info.plist
-            base64 -D \<<< $CREDENTIALS_JSON -o VideoApp/Video-TwilioUITests/Credentials.json
+            mkdir -p Credentials || true
+            base64 -D \<<< $GOOGLE_SERVICE_INFO_PLIST -o Credentials/GoogleService-Info.plist
+            base64 -D \<<< $TEST_CREDENTIALS_JSON -o Credentials/TestCredentials.json
       - restore_cache:
           key: v1-gems-{{ checksum "Gemfile.lock" }}
       - run:
