--- a/VideoApp/VideoApp.xcodeproj/xcshareddata/xcschemes/Video-TwilioUITests.xcscheme
+++ b/VideoApp/VideoApp.xcodeproj/xcshareddata/xcschemes/Video-TwilioUITests.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "1100"
+   LastUpgradeVersion = "1120"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -26,27 +26,7 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      shouldUseLaunchSchemeArgsEnv = "YES"
-      codeCoverageEnabled = "YES"
-      onlyGenerateCoverageForSpecifiedTargets = "YES">
-      <MacroExpansion>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "241282361E36A6AB002198BE"
-            BuildableName = "Video-Twilio.app"
-            BlueprintName = "Video-Twilio"
-            ReferencedContainer = "container:VideoApp.xcodeproj">
-         </BuildableReference>
-      </MacroExpansion>
-      <CodeCoverageTargets>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "241282361E36A6AB002198BE"
-            BuildableName = "Video-Twilio.app"
-            BlueprintName = "Video-Twilio"
-            ReferencedContainer = "container:VideoApp.xcodeproj">
-         </BuildableReference>
-      </CodeCoverageTargets>
+      shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
          <TestableReference
             skipped = "NO">
@@ -55,6 +35,16 @@
                BlueprintIdentifier = "DC4E4E2B2357A73900C5D313"
                BuildableName = "Video-TwilioTests.xctest"
                BlueprintName = "Video-TwilioTests"
+               ReferencedContainer = "container:VideoApp.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "DC044678238DD55C0072F597"
+               BuildableName = "Video-TwilioUITests.xctest"
+               BlueprintName = "Video-TwilioUITests"
                ReferencedContainer = "container:VideoApp.xcodeproj">
             </BuildableReference>
          </TestableReference>
